# real-time-ml-system-cohort-1

./: .gitignore
docker-compose/: Makefile  redpanda.yml
services/trade_producer/: Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
