[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gustavo Seluja <gustavoseluja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quixstreams = "^2.7.0"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
